# lifegame

./: main.py  pyproject.toml
classes/: game.py  pathfinder.py  point.py  qlearning.py
utils/: profiler.py
